# trading_test_sda

./: .gitignore  EXECUTE.md  PROGRESS.md  README.md  http_cache.sqlite  list_tickers.json  projet  pyproject.toml  questions.md  requirements.txt
config/: pea_universe.csv
src/: backtest.py  backtester.py  data_collector.py  indicators.py  monitor.py  portfolio_optimizer.py  strategy.py
src/trading_test_sda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_data_collector.py
